meja/tests/recursive-let-multiple-names.stderr
File "tests/recursive-let-multiple-names.meja", line 1, characters 9-13:
Error: This pattern is not allowed for recursive bindings:
too many variables are bound.
