meja/tests/recursive-let-multiple-names.meja
let rec (x, y) = (12, true);
